--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -63,7 +63,7 @@
   }
   .navbar-logo {
     margin-bottom: 1rem;
-    align-items: center;
+    margin-left: 250px;
     display: flex;
   }
   .menu-toggle {
