--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -66,7 +66,8 @@
     margin-bottom: 1rem;
     display: flex;
     align-items:center;
-    margin-left:150px;
+    margin-left:140px;
+    text-align:center;
   }
   .menu-toggle {
     display: block;
